--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
           </div>
           <div class="button">
             <p></p>
-            <a class="btn btn-warning" href="https://www.instagram.com/wijanarko_aji/" role="button">Follow Itu Gratis Gais</a>
+            <p>Klik tombol di bawah ini untuk Follow</p>
+            <a class="btn btn-success" href="https://www.instagram.com/wijanarko_aji/" role="button">Follow </a>
           </div>
         </div>
       </div>
