mengubah warna tombol

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body id="home">
     <!-- Nav Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm fixed-top">
-      <div class="container">
+      <div class="container md-4">
         <a class="navbar-brand" href="#">Aji Wijanarko</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -45,7 +45,7 @@
       <p class="lead">Selamat datang mahasiswa Teknologi Informasi angkatan 2021 :)</p>
       <img src="img/aji.jpg" alt="aji" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Aji Wijanarko</h1>
-      <p class="lead">Mahasiswa Kura-Kura</p>
+      <p class="lead">Teknologi Informasi</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#ffffff"
@@ -97,8 +97,8 @@
           <div class="col">
             <h2>Instagram</h2>
           </div>
-          <div class="ro">
-            <img src="img/ig.png" alt="ig" width="600" />
+          <div class="ro justify-center">
+            <img src="img/ig.png" alt="ig" width="300" />
           </div>
           <div class="button">
             <p></p>
@@ -132,7 +132,7 @@
             <h2>WhatsApp</h2>
           </div>
           <div class="ro">
-            <img src="img/wa.jpg" alt="wa" width="400" />
+            <img src="img/wa.jpg" alt="wa" width="200" />
           </div>
           <div class="button">
             <p></p>
