--- a/index.html
+++ b/index.html
@@ -65,12 +65,18 @@
             <p></p>
           </div>
         </div>
-        <div class="row text-center">
-          <div class="col">
-            <h4>Nama : Aji Wijanarko</h4>
-            <h4>NPM /Kelas : 203307008 / 3C</h4>
-            <h4>TTL : Ngawi, 22 Juni 2002</h4>
-            <h4>Alamat : Rt 01,Rw 01 ,Dusun Ngemplak,Desa Sidorejo,Kec Karangjati,Kab Ngawi</h4>
+        <div class="row justify-content-center">
+          <div class="col-5">
+            <h4>Nama :</h4>
+            <h4>NPM /Kelas :</h4>
+            <h4>TTL :</h4>
+            <h4>Alamat :</h4>
+          </div>
+          <div class="col-7">
+            <h4>Aji Wijanarko</h4>
+            <h4>203307008 / 3C</h4>
+            <h4>Ngawi, 22 Juni 2002</h4>
+            <h4>Rt 01,Rw 01 ,Dusun Ngemplak,Desa Sidorejo,Kec Karangjati,Kab Ngawi</h4>
           </div>
         </div>
       </div>
