--- a/index.html
+++ b/index.html
@@ -65,18 +65,18 @@
             <p></p>
           </div>
         </div>
-        <div class="row justify-content-center">
+        <div class="row justify-content-center fs-5">
           <div class="col-5">
-            <h4>Nama :</h4>
-            <h4>NPM /Kelas :</h4>
-            <h4>TTL :</h4>
-            <h4>Alamat :</h4>
+            <p>Nama :</p>
+            <p>NPM /Kelas :</p>
+            <p>TTL :</p>
+            <p>Alamat :</p>
           </div>
           <div class="col-7">
-            <h4>Aji Wijanarko</h4>
-            <h4>203307008 / 3C</h4>
-            <h4>Ngawi, 22 Juni 2002</h4>
-            <h4>Rt 01,Rw 01 ,Dusun Ngemplak,Desa Sidorejo,Kec Karangjati,Kab Ngawi</h4>
+            <p>Aji Wijanarko</p>
+            <p>203307008 / 3C</p>
+            <p>Ngawi, 22 Juni 2002</p>
+            <p>Rt 01,Rw 01 ,Dusun Ngemplak,Desa Sidorejo,Kec Karangjati,Kab Ngawi</p>
           </div>
         </div>
       </div>
